# reflex-native

./: .gitignore  Makefile  README.md  default.nix  host.project  host.project.template  ios.project  ios.project.template
examples/draggy/: LICENSE  reflex-native-draggy.cabal
examples/draggy/src/Reflex/Native/Examples/: Draggy.hs
hs-androidui/: hs-android.cabal
hs-kiwi/: hs-kiwi.cabal
hs-kiwi/cbits/: hs-kiwi.cpp
hs-kiwi/kiwi/: UPSTREAM-VERSION  errors.h  solver.h  solverimpl.h  variable.h
hs-kiwi/src/: Kiwi.hs
hs-kiwi/src/Kiwi/Raw/: Constraint.hs  Errors.hs  Expression.hs  Solver.hs  Strength.hs  Term.hs  Types.hs  Variable.hs
hs-kiwi/test/: ConstraintSuite.hs  ExpressionSuite.hs  ReadmeSuite.hs  SolverSuite.hs  StrengthSuite.hs  TermSuite.hs  VariableSuite.hs  main.hs
hs-uikit/: hs-uikit.cabal
kiwi/binding/cpp/: kiwi-cpp.cabal
kiwi/binding/cpp/cbits/: hs-kiwi.cpp
kiwi/binding/cpp/kiwi/: variable.h
kiwi/binding/cpp/src/Kiwi/: Cpp.hs
kiwi/binding/cpp/src/Kiwi/Cpp/: DslBinding.hs
kiwi/binding/cpp/src/Kiwi/Cpp/Raw/: Constraint.hs  Errors.hs  Expression.hs  Solver.hs  Term.hs  Types.hs  Variable.hs
kiwi/binding/cpp/test/: ConstraintSuite.hs  ExpressionSuite.hs  ReadmeSuite.hs  SolverSuite.hs  StrengthSuite.hs  TermSuite.hs  VariableSuite.hs
kiwi/dsl/: default.nix  kiwi-dsl.cabal
kiwi/dsl/src/Kiwi/: Dsl.hs
reflex-native/: reflex-native.cabal
reflex-native-test/: reflex-native-test.cabal
reflex-native-test/src/Reflex/Native/: Test.hs
reflex-native-test/src/Reflex/Native/Test/: Evaluation.hs  Optics.hs  Runner.hs  Types.hs  ViewBuilder.hs
reflex-native-uikit/: reflex-native-uikit.cabal
reflex-native-uikit/src/Reflex/UIKit/: ViewBuilder.hs
reflex-native/src/Reflex/: Native.hs
reflex-native/src/Reflex/Native/: ContainerConfig.hs  Geometry.hs  TextConfig.hs  TextStyle.hs  ViewConfig.hs  ViewStyle.hs
reflex-native/src/Reflex/Native/ViewBuilder/: Class.hs
reflex-native/src/Reflex/Native/ViewLayout/: Class.hs  Constraint.hs  Explicit.hs  Fill.hs  Linear.hs  Root.hs
reflex-native/src/Reflex/Native/Widget/: Basic.hs  Customization.hs
