name:           reflex-native
version:        0.1.0.0
synopsis:       Cross platform layer for developing native Reflex apps
description:    Provides a cross platform API for developing Reflex apps that are true native with no web views or javascript runtimes
author:         Ross MacLeod
maintainer:     dridus@gmail.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/reflex-frp/reflex-native
bug-reports:    https://github.com/reflex-frp/reflex-native/issues

library
  default-language: Haskell2010
  exposed-modules:
      Reflex.Native
      Reflex.Native.AdjustingBuilder
      Reflex.Native.Color
      Reflex.Native.ContainerConfig
      Reflex.Native.Font
      Reflex.Native.Geometry
      Reflex.Native.Gesture
      Reflex.Native.TextConfig
      Reflex.Native.TextStyle
      Reflex.Native.Widget.Basic
      Reflex.Native.Widget.Customization
      Reflex.Native.ViewBuilder.Class
      Reflex.Native.ViewConfig
      Reflex.Native.ViewLayout.Class
      Reflex.Native.ViewLayout.Constraint
      Reflex.Native.ViewLayout.Explicit
      Reflex.Native.ViewLayout.Fill
      Reflex.Native.ViewLayout.Linear
      Reflex.Native.ViewStyle
  hs-source-dirs: src
  ghc-options:
      -Wall -fwarn-tabs -funbox-strict-fields -O2 -fspecialise-aggressively
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , containers == 0.5.*
    , data-default >= 0.5 && < 0.8
    , dependent-map == 0.2.*
    , dependent-sum >= 0.3 && < 0.5
    , generic-lens == 1.0.*
    , kiwi-dsl == 0.1.*
    , lens == 4.16.*
    , mtl >= 2.1 && < 2.3
    , rank2classes == 1.1.*
    , ref-tf == 0.4.*
    , reflex
    , text == 1.2.*
    , transformers >= 0.3 && < 0.6
    , vector-space == 0.13.*
