name:           kiwi-dsl
version:        0.1.0.0
synopsis:       DSL types for Kiwi constraint solving without bindings
description:    Provides a DSL and types for working with constraints without any FFI bits, allowing the C++, JS, or neither implementation to be included.
author:         Ross MacLeod
maintainer:     dridus@gmail.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/reflex-frp/reflex-native
bug-reports:    https://github.com/reflex-frp/reflex-native/issues

library
  default-language: Haskell2010
  exposed-modules:
    Kiwi.Dsl
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
  ghc-prof-options: -fprof-auto
  build-depends:
      base
    , bytestring == 0.10.*
    , mtl >= 2.1 && < 2.3
    , text == 1.2.*
