name:           kiwi-cpp
version:        0.1.0.0
synopsis:       Bindings to the Kiwi layout constraint solver C++ library
description:    Provides bindings to Kiwi C++, which implements the Cassowary layout constraint algorithm and can be used to declaratively lay out UI
                components.
author:         Ross MacLeod
maintainer:     dridus@gmail.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/reflex-frp/reflex-native
bug-reports:    https://github.com/reflex-frp/reflex-native/issues

library
  default-language: Haskell2010
  exposed-modules:
    Kiwi.Cpp
    Kiwi.Cpp.DslBinding
    Kiwi.Cpp.Raw.Constraint
    Kiwi.Cpp.Raw.Errors
    Kiwi.Cpp.Raw.Expression
    Kiwi.Cpp.Raw.Solver
    Kiwi.Cpp.Raw.Term
    Kiwi.Cpp.Raw.Types
    Kiwi.Cpp.Raw.Variable
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
  ghc-prof-options: -fprof-auto
  include-dirs: kiwi/
  c-sources:
    cbits/hs-kiwi.cpp
  extra-libraries: stdc++
  build-depends:
      base
    , bytestring == 0.10.*
    , kiwi-dsl == 0.1.*
    , mtl >= 2.1 && < 2.3
    , text == 1.2.*

test-suite kiwi-cpp-test
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test
  other-modules:
    ConstraintSuite
    ExpressionSuite
    ReadmeSuite
    SolverSuite
    StrengthSuite
    TermSuite
    VariableSuite
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , kiwi-cpp
    , hspec == 2.4.*
    , hspec-expectations-lifted == 0.10.*
    , lifted-base == 0.2.*
    , transformers >= 0.3 && < 0.6

